Add datetime to current location printout

--- a/index.ipynb
+++ b/index.ipynb
@@ -128,27 +128,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading formatted geocoded file...\n",
-      "The ISS is currently passing Felidhoo, MV.\n"
+      "As of 2020-12-13 20:23:59 UTC, the ISS is passing Felidhoo, MV.\n"
      ]
     }
    ],
    "source": [
     "# Interpret your results using the API\n",
     "import reverse_geocoder as rg\n",
+    "from datetime import datetime\n",
     "\n",
     "coordinates = iss_lat, iss_long\n",
     "location = rg.search(coordinates)\n",
     "city = location[0]['name']\n",
     "country = location[0]['cc']\n",
-    "print('The ISS is currently passing {}, {}.'.format(city, country))"
+    "time = resp['timestamp']\n",
+    "dt = datetime.fromtimestamp(time)\n",
+    "print('As of', dt ,'UTC, the ISS is passing {}, {}.'.format(city, country))"
    ]
   },
   {
@@ -288,8 +290,6 @@
    ],
    "source": [
     "# Check the API and interpret your results - when will ISS pass over NEW York next ?\n",
-    "from datetime import datetime\n",
-    "\n",
     "n = resp2['request']['passes']\n",
     "next_ts = resp2['response'][0]['risetime']\n",
     "next_dt = datetime.fromtimestamp(next_ts)\n",
